[package]
name = "lockrion_issuance_v1_1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
custom-heap = []
custom-panic = []
test-clock = []

[dependencies]
solana-program = "1.18.22"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.4"
thiserror = "1.0.56"

[dev-dependencies]
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
spl-associated-token-account = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"